test/Feature/Output/OvershiftCheck.c.tmp.klee-out/test000002.pc
array shift_amount1[4] : w32 -> w8 = symbolic
array shift_amount2[4] : w32 -> w8 = symbolic
(query [(Ult (ZExt w64 (ReadLSB w32 0 shift_amount1))
              32)
         (Eq false
             (Ult (ZExt w64 (ReadLSB w32 0 shift_amount2))
                  32))]
        false)
